# weather-cli

./: README.md  helper_func.py  main.py  pyproject.toml
Models/: base_models.py  forecast_models.py
handlers/: compare.py  forecast.py  temperature.py
